# rustmate

./: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
api/: build.gradle.kts
api/src/main/java/dev/taah/connection/: IConnection.java
api/src/main/java/dev/taah/data/: IGameOptionsData.java
api/src/main/java/dev/taah/inner/: InnerNetObject.java
api/src/main/java/dev/taah/packet/: IDeserializable.java  ISerializable.java
api/src/main/java/dev/taah/protocol/: IProtocolHandler.java
api/src/main/java/dev/taah/util/: GameCode.java  HazelMessage.java  PacketBuffer.java
backend/: build.gradle.kts
backend/src/main/java/dev/taah/connection/: PlayerConnection.java
backend/src/main/java/dev/taah/data/: GameOptionsData.java  PlatformData.java  PlayerOutfit.java
backend/src/main/java/dev/taah/inner/: GameData.java  InnerNetObject.java  (+1 more)
core/: build.gradle.kts
core/src/main/java/dev/taah/: CrewmateServer.java
src/: main.rs
src/connection/: user.rs
src/inner/: inner.rs  mod.rs  rooms.rs
src/inner/data/: server.rs
src/inner/objects/: inner_net_objects.rs  mod.rs
src/inner/protocol/: core_packets.rs  protocol.rs  root_packets.rs
src/inner/structs/: player.rs
src/manager/: connections.rs  manager.rs  states.rs  user.rs
src/matchmaker/: handler.rs  matchmaker.rs
src/networking/: buffer.rs  hazel_message.rs  networking.rs
src/protocol/: packet.rs  protocol.rs  reliable_packets.rs
src/protocol/game_data/: game_data.rs
src/util/: buffer.rs  hazel.rs  inner.rs  mod.rs  util.rs  vector.rs
src/util/structs/: enums.rs  structs.rs
(+24 files in other folders)
