[package]
name = "hydrogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
lazy_static = "1.4.0"
axum = { version = "0.5.8", features = ["default", "ws", "json", "serde_json"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
futures = "0.3.21"
rand = "0.8.5"